# musl-sem-ext

./: .dockerignore  CMakeLists.txt  COPYRIGHT  Dockerfile  README.md
include/: musl-sem.h
include/internal/: atomic.h  sem-limits.h  threading.h
src/: __lock.c  __timedwait.c  __wait.c  sem_destroy.c  sem_getvalue.c  sem_init.c  sem_open.c  sem_post.c  sem_timedwait.c  sem_trywait.c  sem_unlink.c  sem_wait.c  shim.c
test/: test_env.cpp  test_sem.cpp
